# sollya

./: .gitignore  AUTHORS  ChangeLog  HOWTO-addACommandInSollya.txt  Makefile.am  Memo-release.txt  NEWS  README  Sollya-HOWTO-Add-a-new-command.tex  TODO  TODO_sollya5.0  assignment.c  assignment.h  autodiff.c  autodiff.h  autoinstall-core  autoinstall.sh  base-functions.c  base-functions.h  bitfields.c  bitfields.h  chain.c  chain.h  chebModels.c  chebModels.h  chebModelsAux.c  chebModelsAux.h  chebyshevform.c  chebyshevform.h  chebyshevformaux.c  chebyshevformaux.h  configure.ac  double.c  double.h  execute.c  execute.h  expression.c  expression.h  external.c  external.h  (+87 more)
doc/: CommandsAndFunctions.tex  Makefile.am  absolute.tex  accurateinfnorm.tex  and.tex  annotatefunction.shlp  annotatefunction.tex  append.tex  approx.tex  asciiplot.tex  autodiff.shlp  autodiff.tex  autosimplify.shlp  autosimplify.tex  bashevaluate.tex  bashexecute.tex  bind.tex  boolean.shlp  boolean.tex  canonical.tex  chebyshevform.shlp  chebyshevform.tex  checkinfnorm.tex  coeff.tex  composepolynomials.tex  concat.shlp  concat.tex  constant.shlp  constant.tex  default.tex  degree.tex  denominator.tex  dieonerrormode.tex  diff.tex  dirtyfindzeros.shlp  dirtyfindzeros.tex  dirtyinfnorm.tex  dirtyintegral.shlp  dirtyintegral.tex  dirtysimplify.tex  (+202 more)
doc/www/: ListOfCommands.php  annotatefunction.php  approx.php  asciiplot.php  autodiff.php  autosimplify.php  bashevaluate.php  bashexecute.php  boolean.php  chebyshevform.php  composepolynomials.php  concat.php  constant.php  dirtyfindzeros.php  dirtyinfnorm.php  dirtyintegral.php  dirtysimplify.php  display.php  divide.php  doubledouble.php  doubleextended.php  equal.php  eucldiv.php  euclmod.php  evaluate.php  execute.php  externalproc.php  floating.php  fpminimax.php  function.php  gcd.php  getbacktrace.php  guessdegree.php  head.php  help.php  honorcoeffprec.php  hopitalrecursions.php  implementconstant.php  implementpoly.php  infnorm.php  (+59 more)
tests/: Makefile.am  check.proto  check.sollya  check.sollya.output  check016.sollya  check016.sollya.reference  check021.sollya  checkSupnorm.sollya
tests-lib/: Makefile.am  check.proto  check00.c  libraryexample.c  tabs.c  tabsolute.c  tacos.c  tacosh.c  tadd.c  tannotatefunction.c  tappend.reference  tasciiplot.reference  tasin.c  tasinh.c  tassign_in_structure.c  tatan.c  tatanh.c  tbinary.c  tbuild_function_abs.c  tbuild_function_acos.c  tbuild_function_acosh.c  tbuild_function_add.c  tbuild_function_asin.c  tbuild_function_asinh.c  tbuild_function_atan.c  tbuild_function_atanh.c  tbuild_function_ceil.c  tbuild_function_cos.c  tbuild_function_cosh.c  tbuild_function_div.c  tbuild_function_double.c  tbuild_function_double_double.c  tbuild_function_doubleextended.c  tbuild_function_erf.c  tbuild_function_erfc.c  tbuild_function_exp.c  tbuild_function_expm1.c  tbuild_function_floor.c  tbuild_function_free_variable.c  tbuild_function_halfprecision.c  (+288 more)
tests-tool/: Makefile.am  check.proto  check001.sollya.reference  check002.sollya  check002.sollya.reference  check003.sollya  check003.sollya.reference  check004.sollya.reference  check005.sollya.reference  check007.sollya.reference  check008.sollya  check008.sollya.reference  check009.sollya  check009.sollya.reference  check010.sollya  check010.sollya.reference  check011.sollya.reference  check012.sollya  check012.sollya.reference  check013.sollya  check013.sollya.reference  check014.sollya.reference  check015.sollya  check015.sollya.reference  check016.sollya  check016.sollya.reference  check018.sollya  check018.sollya.reference  check019.sollya.reference  check020.sollya  check020.sollya.reference  check021.sollya.reference  check022.sollya  check022.sollya.reference  check024.sollya  check024.sollya.reference  check025.sollya.reference  check027.sollya  check027.sollya.reference  check028.sollya.reference  (+9 more)
tools/: copyright_update_helper.sh  docExamples2memleak.sh  graphSeeAlso.sh
tools/mallocwrapper/: mallocwrapper.c
