TEXSOURCES = absolute.tex \
infnorm.tex \
nop.tex \
abs.tex \
inf.tex \
not.tex \
accurateinfnorm.tex \
integer.tex \
numberroots.tex \
acosh.tex \
integral.tex \
numerator.tex \
acos.tex \
in.tex \
objectname.tex \
and.tex \
introExample10.tex \
object.tex \
annotatefunction.tex \
introExample11.tex \
off.tex \
append.tex \
introExample12.tex \
on.tex \
approx.tex \
introExample13.tex \
or.tex \
asciiplot.tex \
introExample14.tex \
parse.tex \
asinh.tex \
introExample15.tex \
perturb.tex \
asin.tex \
introExample16.tex \
pi.tex \
atanh.tex \
introExample17.tex \
plot.tex \
atan.tex \
introExample18.tex \
plus.tex \
autodiff.tex \
introExample19.tex \
points.tex \
autosimplify.tex \
introExample1.tex \
postscriptfile.tex \
bashevaluate.tex \
introExample20.tex \
postscript.tex \
bashexecute.tex \
introExample21.tex \
powers.tex \
binary.tex \
introExample22.tex \
power.tex \
bind.tex \
introExample23.tex \
precision.tex \
boolean.tex \
introExample24.tex \
prec.tex \
canonical.tex \
introExample25.tex \
prepend.tex \
ceil.tex \
introExample26.tex \
printdouble.tex \
chebyshevform.tex \
introExample27.tex \
printexpansion.tex \
checkinfnorm.tex \
introExample28.tex \
printsingle.tex \
coeff.tex \
introExample29.tex \
print.tex \
CommandsAndFunctions.tex \
introExample2.tex \
printxml.tex \
composepolynomials.tex \
introExample30.tex \
procedure.tex \
concat.tex \
introExample31.tex \
proc.tex \
constant.tex \
introExample32.tex \
qd.tex \
cosh.tex \
introExample33.tex \
quad.tex \
cos.tex \
introExample34.tex \
quit.tex \
dd.tex \
introExample35.tex \
range.tex \
decimal.tex \
introExample36.tex \
rationalapprox.tex \
default.tex \
introExample37bis.tex \
rationalmode.tex \
degree.tex \
introExample37.tex \
rd.tex \
denominator.tex \
introExample38.tex \
readfile.tex \
de.tex \
introExample39.tex \
readxml.tex \
diam.tex \
introExample3bis.tex \
relative.tex \
dieonerrormode.tex \
introExample3.tex \
remez.tex \
diff.tex \
introExample40.tex \
rename.tex \
dirtyfindzeros.tex \
introExample41.tex \
restart.tex \
dirtyinfnorm.tex \
introExample42.tex \
return.tex \
dirtyintegral.tex \
introExample43.tex \
revert.tex \
dirtysimplify.tex \
introExample44.tex \
rn.tex \
display.tex \
introExample45.tex \
roundcoefficients.tex \
divide.tex \
introExample46.tex \
roundcorrectly.tex \
doubledouble.tex \
introExample47.tex \
roundingwarnings.tex \
doubleextended.tex \
introExample48.tex \
round.tex \
double.tex \
introExample49.tex \
ru.tex \
d.tex \
introExample4.tex \
rz.tex \
dyadic.tex \
introExample50.tex \
searchgal.tex \
equal.tex \
introExample51.tex \
sg.tex \
erfc.tex \
introExample52.tex \
showmessagenumbers.tex \
erf.tex \
introExample53.tex \
simplify.tex \
error.tex \
introExample54.tex \
single.tex \
evaluate.tex \
introExample55.tex \
sinh.tex \
execute.tex \
introExample56.tex \
sin.tex \
expand.tex \
introExample57.tex \
sollya.tex \
expm1.tex \
introExample58.tex \
sort.tex \
exponent.tex \
introExample59.tex \
sqrt.tex \
exp.tex \
introExample5.tex \
string.tex \
externalplot.tex \
introExample6.tex \
subpoly.tex \
externalproc.tex \
introExample7.tex \
substitute.tex \
false.tex \
introExample8.tex \
supnorm.tex \
file.tex \
introExample9.tex \
suppressmessage.tex \
findzeros.tex \
isbound.tex \
sup.tex \
fixed.tex \
isevaluable.tex \
tail.tex \
floating.tex \
length.tex \
tanh.tex \
floor.tex \
le.tex \
tan.tex \
fpminimax.tex \
libraryconstant.tex \
taylorform.tex \
fullparentheses.tex \
library.tex \
taylorrecursions.tex \
function.tex \
listof.tex \
taylor.tex \
getbacktrace.tex \
log10.tex \
td.tex \
ge.tex \
log1p.tex \
time.tex \
getsuppressedmessages.tex \
log2.tex \
timing.tex \
gt.tex \
log.tex \
tripledouble.tex \
guessdegree.tex \
lt.tex \
true.tex \
halfprecision.tex \
mantissa.tex \
unsuppressmessage.tex \
head.tex \
max.tex \
var.tex \
hexadecimal.tex \
midpointmode.tex \
verbosity.tex \
honorcoeffprec.tex \
mid.tex \
void.tex \
hopitalrecursions.tex \
min.tex \
worstcase.tex \
horner.tex \
minus.tex \
write.tex \
hp.tex \
mult.tex \
xfreevariable.tex \
implementconstant.tex \
nearestint.tex \
implementpoly.tex \
neq.tex \
absolute.tex

EXTRA_DIST = sollya.pdf $(TEXSOURCES)

PDFLATEX = TEXINPUTS="$(srcdir):" pdflatex

sollya.pdf: $(TEXSOURCES)
	-$(PDFLATEX) sollya
	-$(PDFLATEX) sollya
	-$(PDFLATEX) sollya
	$(PDFLATEX) sollya
